[package]
name = "morb"
version = "0.2.0"
edition = "2024"
description = "A lightweight in-process publish/subscribe library for Rust"
license = "MIT"
repository = "https://github.com/HumpbackLab/morb"
homepage = "https://github.com/HumpbackLab/morb"
documentation = "https://docs.rs/morb"
readme = "README.md"
keywords = ["pubsub", "message", "mio", "eventfd"]
categories = ["concurrency", "data-structures"]

[dependencies]
libc = "0.2.183"
mio = {version = "1.1.1",features = ["os-poll","os-ext"] }
